--- a/wp-port-client/src/main/resources/application.yml
+++ b/wp-port-client/src/main/resources/application.yml
@@ -1,11 +1,16 @@
 wp:
   port:
     client:
-      remote-address: 127.0.0.1
-      remote-port: 22
       server-url: ws://127.0.0.1:8080/wp
-      bind-addr: 127.0.0.1
-      bind-port: 8226
+      port-forwarding-list:
+        - remote-address: 127.0.0.1
+          remote-port: 22
+          bind-addr: 127.0.0.1
+          bind-port: 8226
+        - remote-address: 127.0.0.1
+          remote-port: 21
+          bind-addr: 127.0.0.1
+          bind-port: 8227
 logging:
   level:
     com.snail.core.handler.DataHandler: trace
