--- a/wp-port-client/src/main/resources/application.yml
+++ b/wp-port-client/src/main/resources/application.yml
@@ -11,6 +11,6 @@ wp:
           remote-port: 21
           bind-addr: 127.0.0.1
           bind-port: 8227
-logging:
-  level:
-    com.snail.core.handler.DataHandler: trace
+#logging:
+#  level:
+#    com.snail.core.handler.DataHandler: trace
