--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>wp-client-common</module>
         <module>wp-port-client</module>
         <module>wp-socket5-client</module>
+        <module>wp-pass-proxy-server-support</module>
+        <module>wp-pass-proxy-client</module>
     </modules>
 
     <properties>
