--- a/wp-pass-proxy-client/pom.xml
+++ b/wp-pass-proxy-client/pom.xml
@@ -10,19 +10,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ws-basic-server</artifactId>
-    <groupId>io.github.project-snail</groupId>
-    <version>1.0</version>
+    <artifactId>wp-pass-proxy-client</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>io.github.project-snail</groupId>
-            <artifactId>wp-core</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.project-snail</groupId>
-            <artifactId>wp-server-boot-starter</artifactId>
+            <artifactId>wp-client-common</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
@@ -37,11 +30,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.github.project-snail</groupId>
-            <artifactId>wp-pass-proxy-server-support</artifactId>
-            <version>1.0</version>
         </dependency>
     </dependencies>
 
