--- a/wp-client-common/pom.xml
+++ b/wp-client-common/pom.xml
@@ -3,16 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.4.RELEASE</version>
-        <relativePath />
+        <artifactId>snail-ws-proxy</artifactId>
+        <groupId>io.github.project-snail</groupId>
+        <version>1.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>wp-client-common</artifactId>
-    <groupId>io.github.project-snail</groupId>
-    <version>1.1</version>
     <properties>
         <tyrus-standalone-client.version>1.13.1</tyrus-standalone-client.version>
     </properties>
@@ -21,7 +18,7 @@
         <dependency>
             <groupId>io.github.project-snail</groupId>
             <artifactId>wp-core</artifactId>
-            <version>1.1</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.tyrus.bundles</groupId>
