--- a/wp-core/pom.xml
+++ b/wp-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>snail-ws-proxy</artifactId>
         <groupId>io.github.project-snail</groupId>
-        <version>1.1</version>
+        <version>1.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -26,6 +26,10 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
         </dependency>
     </dependencies>
 
