--- a/wp-socket5-client/pom.xml
+++ b/wp-socket5-client/pom.xml
@@ -3,22 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.4.RELEASE</version>
-        <relativePath />
+        <artifactId>snail-ws-proxy</artifactId>
+        <groupId>io.github.project-snail</groupId>
+        <version>1.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>wp-socket5-client</artifactId>
-    <groupId>io.github.project-snail</groupId>
-    <version>1.0</version>
 
     <dependencies>
         <dependency>
             <groupId>io.github.project-snail</groupId>
             <artifactId>wp-client-common</artifactId>
-            <version>1.1</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
