--- a/ws-basic-server/pom.xml
+++ b/ws-basic-server/pom.xml
@@ -3,27 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.4.RELEASE</version>
-        <relativePath />
+        <artifactId>snail-ws-proxy</artifactId>
+        <groupId>io.github.project-snail</groupId>
+        <version>1.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ws-basic-server</artifactId>
-    <groupId>io.github.project-snail</groupId>
-    <version>1.1</version>
 
     <dependencies>
         <dependency>
             <groupId>io.github.project-snail</groupId>
             <artifactId>wp-core</artifactId>
-            <version>1.1</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>io.github.project-snail</groupId>
             <artifactId>wp-server-boot-starter</artifactId>
-            <version>1.1</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -41,7 +38,7 @@
         <dependency>
             <groupId>io.github.project-snail</groupId>
             <artifactId>wp-pass-proxy-server-support</artifactId>
-            <version>1.12</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
