--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <module>wp-socket5-client</module>
         <module>wp-pass-proxy-server-support</module>
         <module>wp-pass-proxy-client</module>
+        <module>wp-terminal-server-support</module>
+        <module>wp-terminal-client</module>
     </modules>
 
     <properties>
@@ -66,6 +68,36 @@
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
                 <version>4.1.49.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-handler</artifactId>
+                <version>4.1.49.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-transport-native-epoll</artifactId>
+                <version>4.1.49.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-transport-native-kqueue</artifactId>
+                <version>4.1.49.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-codec-socks</artifactId>
+                <version>4.1.49.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains.pty4j</groupId>
+                <artifactId>pty4j</artifactId>
+                <version>0.8.6</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains.jediterm</groupId>
+                <artifactId>jediterm-pty</artifactId>
+                <version>2.34</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
